--- a/client/src/app/errors/server-error/server-error.component.html
+++ b/client/src/app/errors/server-error/server-error.component.html
@@ -1,5 +1,5 @@
 <h4>
-  Internal server error - refreashing the page will make the error disapppear!
+  Internal server error - refreshing the page will make the error disapppear!
 </h4>
 
 <ng-container *ngIf="error">
